fix: navbar nickname alignment

--- a/frontend/components/common/Navbar.module.scss
+++ b/frontend/components/common/Navbar.module.scss
@@ -103,6 +103,7 @@
       color: var(--color-point);
       font-weight: 700;
       min-width: 100px;
+      text-align: end;
     }
 
     .niceto {
